Thu Sep  5 13:49:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* include/ruby/ruby.h: add RSTRING_FSTR flag

	* internal.h: add rb_fstring() prototype

	* parse.y (str_suffix_gen): deduplicate frozen string literals

	* string.c (rb_fstring): deduplicate frozen string literals

	* string.c (rb_str_free): delete fstrings from frozen_strings table when
	  they are GC'd

	* string.c (Init_String): initialize frozen_strings table

	* test/ruby/test_string.rb: test frozen strings are deduplicated

Thu Sep  5 12:48:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* configure.in (with_gmp): set with_gmp no if it is empty.

Thu Sep  5 10:41:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm_insnhelper.c (vm_getivar): use class sequence to check class
	  identity, instead of pointer + vm state

	* vm_insnhelper.c (vm_setivar): ditto

Thu Sep  5 08:20:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (GMP_DIV_DIGITS): New macro.
	  (bary_divmod_gmp): New function.
	  (rb_big_divrem_gmp): Ditto.
	  (bary_divmod_branch): Ditto.
	  (bary_divmod): Use bary_divmod_branch.
	  (bigdivrem): Ditto.

	* internal.h (rb_big_divrem_gmp): Declared.

Thu Sep  5 06:22:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_divmod_normal): Reduce temporary array allocations.

Thu Sep  5 02:17:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_divrem_normal): Add GC guards.

Thu Sep  5 00:38:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_divrem_normal): New function.

	* internal.h (rb_big_divrem_normal): Declared.

	* ext/-test-/bignum/div.c: New file.

	* test/-ext-/bignum/test_div.rb: New file.

Thu Sep  5 00:08:44 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_normal): Removed.
	  (bary_divmod_normal): New function.
	  (bary_divmod): Use bary_divmod_normal.
	  (bigdivrem): Use bary_divmod_normal.

Wed Sep  4 23:02:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Useless declaration removed.
